0032585: Data Exchange, RWGltf_CafWriter - include OCCT version